--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -166,6 +166,137 @@
 .fairy {
   background-color: #fdb9e9;
 }
+
+.form_container{
+  width: 50%;
+
+  input{
+    width: 100%;
+    height: 40px;
+    margin-bottom: 25px;
+    border-radius: 8px;
+    border: 1px solid #333333;
+    padding: 0 15px;
+  }
+}
+
+.loadings {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+  width: fit-content;
+  margin: 0 auto;
+
+  .text-loading {
+    color: #8c200f;
+
+    &:first-child {
+      animation: 1s loadingText linear infinite;
+    }
+
+    &:nth-of-type(2) {
+      animation: 1s loadingText linear infinite;
+      animation-delay: 0.125s;
+    }
+
+    &:nth-of-type(3) {
+      animation: 1s loadingText linear infinite;
+      animation-delay: 0.25s;
+    }
+
+    &:nth-of-type(4) {
+      animation: 1s loadingText linear infinite;
+      animation-delay: 0.375s;
+    }
+
+    &:nth-of-type(5) {
+      animation: 1s loadingText linear infinite;
+      animation-delay: 0.5s;
+    }
+
+    &:nth-of-type(6) {
+      animation: 1s loadingText linear infinite;
+      animation-delay: 0.625s;
+    }
+
+    &:nth-of-type(7) {
+      animation: 1s loadingText linear infinite;
+      animation-delay: 0.75s;
+    }
+    &:nth-of-type(8) {
+      animation: 1s loadingText linear infinite;
+      animation-delay: 0.875s;
+    }
+    &:nth-of-type(9) {
+      animation: 1s loadingText linear infinite;
+      animation-delay: 0.895s;
+    }
+    &:nth-of-type(10) {
+      animation: 1s loadingText linear infinite;
+      animation-delay: 1s;
+    }
+  }
+}
+
+.loader {
+  display: flex;
+  align-items: flex-end;
+  gap: 1rem;
+}
+
+.pikachu {
+  position: relative;
+  animation: 10s run linear infinite;
+
+  img {
+    height: 5rem;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: 2px;
+    left: -125%;
+    width: 150%;
+    height: 2px;
+    background: rgb(247, 233, 1);
+    background: linear-gradient(
+      90deg,
+      rgba(247, 233, 1, 0) 0%,
+      rgba(247, 233, 1, 0.1829774145986519) 30%,
+      rgba(247, 233, 1, 0.7011846975118172) 70%,
+      rgba(247, 233, 1, 1) 100%
+    );
+  }
+}
+
+@keyframes run {
+  0% {
+    transform: translateX(-500px);
+  }
+  100% {
+    transform: translateX(1300px);
+  }
+}
+
+@keyframes roll {
+  0% {
+    transform: translateX(-1000px) rotate(0);
+  }
+  100% {
+    transform: translateX(1500px) rotate(3turn);
+  }
+}
+
+@keyframes loadingText {
+  0%,
+  100% {
+    tranform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
   
   @media (max-width: 600px) {
     .grid {
